fixing bio cut off

--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ body{
   -moz-background-repeat: repeat;
   -o-background-repeat: repeat;
   background-repeat: repeat;
-  max-height: 100%;
-  padding-bottom: 60px;
+  max-height: 600%;
+  padding-bottom: 50px;
 }
 
 h1 {
